--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.application.name=OneMeal_be
+server.port=8081
 
-server.port= 8081
+# MySQL Database Connection
+spring.datasource.url=jdbc:mysql://db-instance.crgoasi8ga1l.ap-northeast-2.rds.amazonaws.com:3306/OneMeal_db
+spring.datasource.username=admin
+spring.datasource.password=dhgPwns0303!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Hibernate Settings
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
