add OAuth Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+# Google
+google.client-id=597673576446-t8vtu1oo6bge8i7on5a502m59ugvrs7b.apps.googleusercontent.com
+google.client-secret=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
+google.redirect-uri=http://13.125.88.2:8081/api/oauth/login/google
+
+# Kakao
+kakao.client-id=747fd8f5dc40c3ca09b3c944d4e795bd
+kakao.client-secret=02b6ecd7b53411e65551b9caa1ae4233
+kakao.redirect-url=http://13.125.88.2:8081/api/oauth/login/kakao
+
